Some cleanup in template overrides.

--- a/Episode_1/template_overrides_event_schedule/media/templates/site/cassiopeia_fields/css/user.css
+++ b/Episode_1/template_overrides_event_schedule/media/templates/site/cassiopeia_fields/css/user.css
@@ -6,6 +6,10 @@
     border:1px solid gray;
 }
 
+.event-content a{
+    color: black;
+    text-decoration: none;
+}
 .event-general{
     background-color: #eaac67; 
 }
