section_id field: + showon and - context

--- a/Episode_3/com_eventschedule/administrator/components/com_eventschedule/forms/locator.xml
+++ b/Episode_3/com_eventschedule/administrator/components/com_eventschedule/forms/locator.xml
@@ -30,10 +30,8 @@
             value_field="section_name"
             label="COM_EVENTSCHEDULE_LOCATOR_FIELD_SECTION_LABEL"
             description="COM_EVENTSCHEDULE_LOCATOR_FIELD_SECTION_DESC"
-            context="event"
-    >
-      <option value="0">-First select a container-</option>
-    </field>
+            showon="container_id!:"
+    />
 
     <field
             name="starttime"
